Ca a bien avancé

--- a/tp1_HelloWebGL/test/Nicolas/index.css
+++ b/tp1_HelloWebGL/test/Nicolas/index.css
@@ -7,3 +7,15 @@ body {
     margin: 0;
     overflow: hidden;
 }
+
+input {
+    width: 5vw;
+}
+
+select {
+    width: 5vw;
+}
+
+form {
+    height: 16vh;
+}
