style de la page rendu

--- a/tp1_HelloWebGL/rendu/index.css
+++ b/tp1_HelloWebGL/rendu/index.css
@@ -5,8 +5,9 @@ body {
 }
 
 /* taille des éléments html */
-input {
+#submit{
     width: 5vw;
+    margin-left: 20vw;
 }
 
 select {
@@ -14,5 +15,52 @@ select {
 }
 
 form {
-    height: 16vh;
+    height: 100vh;
+    position: absolute;
+    width:30vw;
+    line-height:10px;
+    z-index: 2;
+    background-color: white;
+    padding-left: 5px;
+}
+canvas{
+    position: absolute;
+    z-index: 1;
+    margin-top:-15vh;
+    margin-left: 0vw;
+}
+
+.caseDonnee{
+    width: 2.5vw;
+    height: 2.5vw;
+    text-align: center;
+    box-sizing: border-box;
+    border: 3px solid #ccc;
+    border-radius: 6px;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    outline: none;
+}
+
+#casePrecis{
+    width: 5vw;
+}
+
+.caseDonnee:focus {
+    border: 3px solid #303030;
+}
+
+.DivVal{
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+#blanc{
+    position: absolute;
+    left:70vw;
+    top:0vh;
+    height: 100vh;
+    width: 30vw;
+    z-index: 2;
+    background-color: white;
 }
