--- a/tp2_Beziers/tests/quentin/index.css
+++ b/tp2_Beziers/tests/quentin/index.css
@@ -2,6 +2,7 @@ body {
     margin: 0;
     /* cache la barre pour descendre la page */
     overflow: hidden;
+    font-family: serif;
 }
 
 /* taille des éléments html */
