--- a/tp1_HelloWebGL/rendu/index.css
+++ b/tp1_HelloWebGL/rendu/index.css
@@ -1,3 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Courgette&display=swap);
 body {
     margin: 0;
     /* cache la barre pour descendre la page */
@@ -21,12 +22,13 @@ form {
     line-height:10px;
     z-index: 2;
     padding-left: 5px;
+    margin-top: 10vh;
 }
 
 canvas{
     position: absolute;
     z-index: 1;
-    margin-top:-15vh;
+    margin-top:10vh;
     margin-left: 30vw;
 }
 
@@ -60,4 +62,28 @@ canvas{
     height: 100vh;
     background: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 75%, #161616 100%), url(./background.jpg);
     background-size: cover;
+}
+
+#head{
+    background-color: black;
+    border: 10px ridge rgba(210, 210, 210, .6);
+    position: absolute;
+    left:0vw;
+    top:0vh;
+    width: 100vw;
+    height: 10vh;
+    color: #cccccc;
+    font-family: 'Courgette';
+    font-size:25px;
+    padding-top: 1vh;
+    padding-left: 1vw;
+}
+
+.lien{
+    margin-left:5vw;
+    text-decoration: none;
+    color: #cccccc;
+}
+.lien:hover{
+    color:#606060;
 }
