--- a/tp2_Beziers/rendu/index.css
+++ b/tp2_Beziers/rendu/index.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Courgette&display=swap);
+
 body {
     margin: 0;
     /* cache la barre pour descendre la page */
@@ -8,27 +9,26 @@ body {
 /* taille des éléments html */
 
 select {
-    width: 5vw;
+    /*width: 5vw;*/
 }
 
 form {
     height: 100vh;
     position: absolute;
-    width:30vw;
-    line-height:10px;
+    width: 30vw;
+    line-height: 10px;
     z-index: 2;
     padding-left: 5px;
-    margin-top: 10vh;
+    margin-top: 5vh;
 }
 
-canvas{
+canvas {
     position: absolute;
     z-index: 1;
-    margin-left: 30vw;
-    margin-top: 10vh;
+    margin-left: 40vw;
 }
 
-.caseDonnee{
+.caseDonnee {
     width: 2.5vw;
     height: 2.5vw;
     text-align: center;
@@ -40,7 +40,7 @@ canvas{
     outline: none;
 }
 
-#casePrecis{
+#casePrecis {
     width: 5vw;
 }
 
@@ -48,38 +48,33 @@ canvas{
     border: 3px solid #303030;
 }
 
-.DivVal{
-    margin-top: 15px;
-    margin-bottom: 15px;
-}
-
 /* classe pour le fond */
 .masthead {
     height: 100vh;
     background: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 75%, #161616 100%), url(background.jpg);
     background-size: cover;
+    margin-top: 0;
 }
 
-#head{
-    background-color: black;
-    border: 10px ridge rgba(210, 210, 210, .6);
-    position: absolute;
-    left:0vw;
-    top:0vh;
-    width: 100vw;
-    height: 10vh;
-    color: #cccccc;
-    font-family: 'Courgette';
-    font-size:25px;
-    padding-top: 1vh;
-    padding-left: 1vw;
-}
-
-.lien{
-    margin-left:5vw;
+.lien {
+    margin-left: 5vw;
     text-decoration: none;
     color: #cccccc;
 }
- .lien:hover{
-     color:#606060;
- }
+
+.lien:hover {
+    color: #606060;
+}
+
+div {
+    margin-top: 5vh;
+}
+
+label {
+    font-size: larger;
+}
+
+/* permet de corriger la position du check de l'autozoom*/
+.form-check-input {
+    margin-top: 0 !important;
+}
