--- a/tp4_Courbes3D/rendu/index.css
+++ b/tp4_Courbes3D/rendu/index.css
@@ -1,9 +1,10 @@
-@import url(https://fonts.googleapis.com/css?family=Courgette&display=swap);
+@import url('https://fonts.googleapis.com/css?family=Courgette');
 
 body {
     margin: 0;
     /* cache la barre de défilement */
     overflow: hidden;
+    font-family: Courgette;
 }
 
 /* taille des éléments html */
@@ -50,7 +51,7 @@ canvas {
 /* classe pour le fond */
 .masthead {
     height: 100vh;
-    background: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 75%, #161616 100%), url(background.jpg);
+    background: linear-gradient(to bottom, rgba(22, 22, 22, 0.3) 0%, rgba(22, 22, 22, 0.7) 75%, #161616 100%);
     background-size: cover;
     margin-top: 0;
 }
