--- a/tp3_BSpline/rendu/index.css
+++ b/tp3_BSpline/rendu/index.css
@@ -18,7 +18,7 @@ form {
     line-height: 10px;
     z-index: 2;
     padding-left: 5px;
-    margin-top: 5vh;
+    margin-top: 2vh;
 }
 
 canvas {
@@ -37,6 +37,8 @@ canvas {
     -webkit-transition: 0.5s;
     transition: 0.5s;
     outline: none;
+    margin-top: 0.5vh;
+    margin-bottom: 0.5vh;
 }
 
 #casePrecis {
@@ -77,3 +79,8 @@ label {
 .form-check-input {
     margin-top: 0 !important;
 }
+
+#noeud, #formPoids{
+    width: 15vw;
+}
+
